# ChangeLog for net-print/hplip
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/hplip/ChangeLog,v 1.227 2012/05/08 15:40:31 ranger Exp $

  08 May 2012; Brent Baude <ranger@gentoo.org> hplip-3.12.4.ebuild:
  Marking hplip-3.12.4 ppc64 for bug 414161

  06 May 2012; Daniel Pielmeier <billie@gentoo.org>
  -files/hplip-3.11.12-black-stripes-pcl5c.patch,
  -files/hplip-3.11.12-fast-pp.patch, -files/hplip-3.11.12-udev-rules.patch,
  hplip-3.12.2-r2.ebuild, -files/hplip-3.12.2-minimal.patch,
  -files/hplip-3.12.2-sane.patch, hplip-3.12.4.ebuild:
  Use patch tarball.

  06 May 2012; Daniel Pielmeier <billie@gentoo.org> hplip-3.12.4.ebuild,
  -files/hplip-3.12.4-cupsddk.patch, -files/hplip-3.12.4-desktop.patch,
  -files/hplip-3.12.4-fast-pp.patch, -files/hplip-3.12.4-htmldir.patch:
  Use patch tarball.

  05 May 2012; Daniel Pielmeier <billie@gentoo.org> hplip-3.11.10.ebuild,
  hplip-3.12.2-r2.ebuild:
  Also add lp group message to old ebuilds.

  05 May 2012; Daniel Pielmeier <billie@gentoo.org> hplip-3.12.4.ebuild:
  Drop cupsddk patch. It should not matter anymore as cupsddk has been dropped
  from the tree. This should also fix part of bug #414195 where hp-check fails.
  Add an elog message about users who must be in the lp group to print. This
  fixes bug #414215.

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> hplip-3.11.10.ebuild,
  hplip-3.12.2-r2.ebuild, hplip-3.12.4.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  30 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> hplip-3.12.4.ebuild:
  Stable on amd64, x86 and ppc. Wrt bug#414161.

*hplip-3.12.4 (11 Apr 2012)

  11 Apr 2012; Daniel Pielmeier <billie@gentoo.org> +hplip-3.12.4.ebuild,
  +files/hplip-3.12.4-cupsddk.patch, +files/hplip-3.12.4-desktop.patch,
  +files/hplip-3.12.4-fast-pp.patch, +files/hplip-3.12.4-htmldir.patch:
  Version bump.

  11 Apr 2012; Daniel Pielmeier <billie@gentoo.org>