@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX hplip-3.10.9-cve-2010-4267.patch 405 RMD160 0be8b7d90180d38420dc9991ada4c3b0b19b72d2 SHA1 449062383eb96dcf971a25f37565aadeebc7f451 SHA256 2280fb55a03d61edbd8ff928ae016c2e58e77bede83226f3d8e627e95fa6103f
 AUX hplip-3.11.1-desktop.patch 506 RMD160 eb55a4cbe136fc2105eb6cad21d5fdd69a8539e6 SHA1 14b591e3fab7342d4ddae80c6aaf9819d864f0b4 SHA256 557faf17a05f3707e2918673ed5eff56954feab0d5555b535236c938306f4523
 AUX hplip-3.11.1-htmldir.patch 4470 RMD160 ab8369b02b3590a19dec6277e03d3e79768ab803 SHA1 b70b07654d9997d4085e32b5a2419a1913c0f611 SHA256 30185a66b033dfdf0db59e600b19454c7680f3fa09ea8c24adf0fff19c15585e
@@ -11,7 +14,14 @@ DIST hplip-3.12.2.tar.gz 20579749 RMD160 99893258300446bab8ae6d4198cc2f0b62197fb
 DIST hplip-3.12.4-patches-1.tar.xz 9048 RMD160 ed71850016c8ae6f81fa22f3cd9244e2ab793bd9 SHA1 73580a97aa71b458929dab608f6103698cd3fc2f SHA256 88924b3a7bca2350de57e7f1eca5632cb423ea105e8d2f958971d905a3882eba
 DIST hplip-3.12.4.tar.gz 20603723 RMD160 616d23a39db65d1590e6cbd821f130a53c2743c2 SHA1 6c095321fac3a06c508531e193dcdd83c30ea99b SHA256 350375c78d79adf635a59a448b27b3fe9ab7ac622637c47125fe5f7d8a537fff
 EBUILD hplip-3.11.10.ebuild 7632 RMD160 4e09a9aac2168c1e04feeb682e5e1fd2d682662d SHA1 9ebf56834e79acad85f1e754525cd37f4fb74d95 SHA256 564a6f920494bc5be3154e488212d8b3cf65b3541415f3998bca16ec838e0a1e
-EBUILD hplip-3.12.2-r2.ebuild 6352 RMD160 979b29c14fa385c8a01a32aa59ba0d3b6da9b986 SHA1 85e1cbeb7af81055e8a9bdc66819bbfe01bfc553 SHA256 70583a974fa4b6f5184b120683296b6e1f22179c59420d16af759468f0d9d4a8
-EBUILD hplip-3.12.4.ebuild 6345 RMD160 6e2488e4ab9c239bf50c42768deb7815b8548c4d SHA1 c295579778772500fb9654204c2d68174dd07f37 SHA256 43e0f83e3dfe1b4cc8d667f2fb9829ed1fd475f228896f06e0550e6a99e76861
-MISC ChangeLog 39716 RMD160 391ebf75ff2b555f4e56136a218e73f461f85698 SHA1 3be45d7bce4dd8d810ecce8ccfc6fc39062973be SHA256 53768cd6155e8004172aafa02354367e397267ef2b5093501dce067541b41092
+EBUILD hplip-3.12.2-r2.ebuild 6546 RMD160 5d30ecbba12ec43dc390e332d8aab16b1146d7d1 SHA1 ee5c0eefc5f3fe44aa6c9b8bf0a2e31894a90310 SHA256 12b6f84ae849e032bd5d6981c6c291df16d8bb85487d465deb1b52c2a431d954
+EBUILD hplip-3.12.4.ebuild 6539 RMD160 696eb67b92cc3e73a5f4bd6ea3c9952e6625f568 SHA1 e924ca3bc6e92bf02341e5e9b2a461929468783c SHA256 d5e1808bb0f3a57277c718c3485f47ebfc4f3aae5209189203e01003ba228b03
+MISC ChangeLog 39890 RMD160 70ef71452103bdbd9ace20536ca3b3efca269838 SHA1 0e7c26487362d25aa0b56822303c4b8e8f01344c SHA256 46f9c3494849bb564c15395bc8387614efa4bcbfa8be4a0a4247bb7d1c710786
 MISC metadata.xml 1711 RMD160 f1bca4a627afc912e6175e5ae158ad8a8051b1a6 SHA1 33c520c95e8a0af0ccf296195ed0e98a6e77f618 SHA256 7859a09f81f31df3e3b1bc2281f69936856ea8b81f381bea85d84d77f389ccc4
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEAREIAAYFAk+6eyUACgkQlcuUeyFa0U0tzACcDN1YFmYVrIZDeDjaCTFUz+3X
+ESUAn3BP7d6kFxYjRds0d+b1TCmSLCE9
+=t4vY
+-----END PGP SIGNATURE-----
